--- a/pandas_practice.ipynb
+++ b/pandas_practice.ipynb
@@ -697,7 +697,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Test update code\n"
+   ]
   }
  ],
  "metadata": {
